Solved issue with the help overlay, not showing for the quick selections

--- a/app/styles/override.scss
+++ b/app/styles/override.scss
@@ -209,7 +209,7 @@ textarea {
 * IntroJS Overrides
 */
 
-.introjs-fixedTooltip {
+.introjs-helperLayer {
     background: none;
     border: 2px dashed $scheme_turquoise;
 }
